--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.js"></script>
-    <script src="./src/API-Calls/names.js"></script>
-    <script src="./src/API-Calls/salary.js"></script>
-    <script src="./src/API-Calls/hireDates.js"></script>
+    <script src="./src/API-Calls/names.js" async></script>
+    <script src="./src/API-Calls/salary.js" async></script>
+    <script src="./src/API-Calls/hireDates.js" async></script>
     <script type="module" src="./src/script.js" defer></script>
   </head>
   <body>
